api docs fully working and autogenning all requests. they have been tested multiple times and work.
